tests/suite/core/snapshots/integration__suite__core__pass_mir__snapshot_mir_basic.snap
---
source: tests/suite/core/pass_mir.rs
expression: mir
---
MirProgram {
    functions: [
        MirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            body: [
                Let {
                    name: "x",
                    typ: Unit,
                    expr: Literal(
                        Int(
                            42,
                        ),
                    ),
                },
                Return(
                    Literal(
                        Unit,
                    ),
                ),
            ],
            span: 0..52,
        },
    ],
    externals: [],
}
